# llm_postraining

./: .gitignore  README.md  explore.ipynb  main.py  pyproject.toml
configs/: llm_judge_local.json  zero_shot_baseline.json
configs/zero_shot/: problem_oriented.json  structured_sections.json  timeline_synthesis.json
scripts/: evaluate_summaries.py  generate_performance_report.py  run_zero_shot_experiments.py  run_zero_shot_validation.py  verify_local_models.py
src/: __init__.py
src/data/: __init__.py  mimic_discharge.py
src/evaluation/: __init__.py  llm_judge.py  metrics.py
src/generation/: __init__.py  base.py  zero_shot.py
src/prompts/: zero_shot_discharge_summary.txt  zero_shot_problem_oriented.txt  zero_shot_structured_sections.txt  zero_shot_timeline_synthesis.txt
