[project]
name = "llm-postraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.6.1",
    "huggingface-hub[cli]>=0.20",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "protobuf>=5.29",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.0",
    "scikit-learn>=1.8.0",
    "torch>=2.2",
    "transformers>=5.2.0",
    "trl>=0.29.0",
]
